syntax = "proto3"

package auth;

service AuthService {
    rpc ValidateToken(ValidateRequest) returns ValidateResponse {}
}

message ValidateRequest {
    string token = 1;
}

message ValidateResponse {
    int32 status = 1;
    string userId = 2;
    optional string username = 3;
}